DevOCL/src/objects/CLQ_Findings__c.object
<CustomObject>
    <fields>
        <fullName>CLQ_Action_Required__c</fullName>
        <label>Action Required</label>
        <picklist>
            <picklistValues>
                <fullName>CAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_CAP_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAP Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Compliance_Due_By__c</fullName>
        <label>Compliance Due By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Documents_Required__c</fullName>
        <label>Documents Required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Findings object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_Finding_Description__c</fullName>
        <label>Finding Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Finding_Type__c</fullName>
        <formula>TEXT(CLQ_Standard_Finding__r.CLQ_Finding_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finding Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Risk_Level__c</fullName>
        <formula>TEXT(CLQ_Standard_Finding__r.CLQ_Risk_Level__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Rules_Inspected__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rules Inspected</label>
        <referenceTo>CLQ_Rules_Inspected__c</referenceTo>
        <relationshipLabel>Findings</relationshipLabel>
        <relationshipName>Findings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Standard_Finding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Standard Finding</label>
        <referenceTo>CLQ_Standard_Findings__c</referenceTo>
        <relationshipLabel>Findings</relationshipLabel>
        <relationshipName>Findings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_TA_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TA Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Findings</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Findings-{000000}</displayFormat>
        <label>Findings No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Findings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>